<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_system_bar_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".example.SystemBarTestActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/s1"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/s2"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/s3"/>

        <Button
            android:id="@+id/btn4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/s4"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/s5"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/s6"/>

        <Button
            android:id="@+id/btn7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/s7"/>

        <Button
            android:id="@+id/btn8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/s8"/>
        <Button
            android:id="@+id/btn9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/s9"/>

    </LinearLayout>
</RelativeLayout>
