<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn01" />

        <Button
            android:id="@+id/btn02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn02" />

        <Button
            android:id="@+id/btn03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn03" />
    </LinearLayout>

    <!-- 显示原图 -->

    <ImageView
        android:id="@+id/imv01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/no_image"
        android:contentDescription="@null" />

    <!-- 显示处理后的图片 -->

    <ImageView
        android:id="@+id/imv02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:contentDescription="@null" />

</LinearLayout>